# aedso

./: .gitignore  Cargo.toml  README.md
data/: a.fa  x.fa  x.vcf  y.vcf
src/: cli.rs  generate.rs  index.rs  io.rs  main.rs  types.rs
