[package]
name = "aedso"
version = "0.0.1"
edition = "2021"
description = "Another Elastic Degenerate String Outputter (aedso)"
repository = "https://github.com/urbanslug/aedso"
readme = "README.md"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
vcf = "0.6.0"
clap = "3.1.6"
flate2 = "1.0"
itertools = "0.10.3"
needletail = "0.4.1"
fbox = { git = "https://github.com/urbanslug/fbox.git" }
